--- a/CONSOLE_GAME.csproj
+++ b/CONSOLE_GAME.csproj
@@ -5,10 +5,13 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
-
+<!--
   <ItemGroup>
     <PackageReference Include="System.Windows.Extensions" Version="7.0.0" />
   </ItemGroup>
+  -->
 
 </Project>
